1.20.1 support and initial create compat, needs further testing -bucket damage displays broken in 1.20.1